# MindLock

./: .env  .env.example  .sample-secret.md  .sample-secret.md.mindlock  Cargo.toml  Dockerfile.daemon  README.md  create-api-key.md  demo.txt.mindlock  docker-compose.yml  fix-on-macos.md  how2usemindlock.md  mock_daemon.js  restored_demo.txt  top-secret.txt  top-secret.txt.mindlock
.rust_env/rustup/: settings.toml
cli/: Cargo.toml
cli/src/: enroll.rs  inspect.rs  lock.rs  main.rs  unlock.rs  wipe_cmd.rs
core/: Cargo.toml
core/src/: behavior.rs  crypto.rs  decoy.rs  error.rs  format.rs  lib.rs  rules.rs  wipe.rs
core/src/crypto/: shamir.rs
daemon/: Cargo.toml
daemon/src/: config.rs  db.rs  main.rs  middleware.rs  models.rs  routes.rs
dashboard/: nginx.conf
scripts/: install_macos_service.sh
web3/: Cargo.toml
web3/src/: chain_log.rs  lib.rs  payment.rs  token.rs  wallet.rs
