[workspace]
members = [
    "core",
    "cli",
    "daemon",
    "web3",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["MindLock"]
license     = "MIT"

[workspace.dependencies]
# Crypto
aes-gcm       = "0.10"
argon2        = "0.5"
rsa           = { version = "0.9", features = ["sha2"] }
sha2          = "0.10"
rand          = "0.8"
zeroize       = { version = "1.7", features = ["derive"] }
hmac          = "0.12"
# Serialization
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
bincode       = "1"
toml          = "0.8"

# Async
tokio         = { version = "1", features = ["full"] }
tokio-util    = "0.7"

# Networking / HTTP
axum          = "0.7"
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower         = "0.4"
tower-http    = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx          = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Utilities
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
thiserror     = "1"
clap          = { version = "4", features = ["derive"] }
base64        = "0.22"
hex           = "0.4"
