[package]
name    = "mindlock-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindlock"
path = "src/main.rs"

[dependencies]
mindlock-core = { path = "../core" }
mindlock-web3 = { path = "../web3" }
clap.workspace          = true
serde.workspace         = true
serde_json.workspace    = true
tokio.workspace         = true
anyhow.workspace        = true
chrono.workspace        = true
uuid.workspace          = true
base64.workspace        = true
rpassword               = "7"
indicatif               = "0.17"
colored                 = "2"
hex.workspace           = true
