[package]
name    = "mindlock-core"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace     = true
argon2.workspace      = true
rsa.workspace         = true
sha2.workspace        = true
rand.workspace        = true
zeroize.workspace     = true
hmac.workspace        = true
lazy_static           = "1.4"
serde.workspace       = true
serde_json.workspace  = true
bincode.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
anyhow.workspace      = true
thiserror.workspace   = true
base64.workspace      = true
hex.workspace         = true
tokio.workspace       = true

[dev-dependencies]
tempfile = "3"
