[package]
name    = "mindlock-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mindlockd"
path = "src/main.rs"

[dependencies]
mindlock-core = { path = "../core" }
mindlock-web3 = { path = "../web3" }
axum.workspace          = true
tokio.workspace         = true
tower.workspace         = true
tower-http.workspace    = true
serde.workspace         = true
serde_json.workspace    = true
sqlx.workspace          = true
uuid.workspace          = true
chrono.workspace        = true
anyhow.workspace        = true
tracing.workspace       = true
tracing-subscriber.workspace = true
reqwest.workspace       = true
base64.workspace        = true
toml.workspace          = true
