[package]
name    = "mindlock-web3"
version.workspace = true
edition.workspace = true

[lib]
name = "mindlock_web3"
path = "src/lib.rs"

[dependencies]
mindlock-core = { path = "../core" }
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
reqwest.workspace     = true
chrono.workspace      = true
hex.workspace         = true
sha2.workspace        = true
uuid.workspace        = true
tracing.workspace     = true
